kubernetes/projects/apps/audreyasked/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: audreyasked
  labels:
    istio.io/dataplane-mode: ambient
