kubernetes/projects/apps/audreyasked/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audreyasked
  namespace: audreyasked
spec:
  selector:
    app: audreyasked
  ports:
  - port: 80
    targetPort: 3000
